add attendee management logic
